
	tag:some.example.com/a/b/c.html
	tag:some.example.com/a/b
	tag:some.example.com/a
	tag:some.example.com
	tag:example.com/a/b/c.html
	tag:example.com/a/b
	tag:example.com/a
	tag:example.com

--2.2.4--

   !	getReceivedHeader: added envelope-from information to Received
	header to aid SpamAssassin.
	http://wiki.apache.org/spamassassin/EnvelopeSenderInReceived

--2.2.3--

   *	Requires Libsnert 1.69.25

   *	Conversion to GIT source control management.

--2.2.2--

   *	Requires Libsnert 1.69.24

   !	mailTestsMail: adjusted mail-require-mx to return temporary
	failure if any of the MX's associated A/AAAA records return
	PDQ_RCODE_SERVER.

   !	nsListLookup: the value of list_name was undefined in the event
   	that pdqGet for the SOA record failed for any reason.

   !	nsListLookup: Changed lookup method.

	Problem in handling wnrl37.cheesereason.com. Version 1 did an
	initial SOA lookup wnrl37.cheesereason.com assuming the DNS
	server would return an SOA for the queried host or parent
	domain. This does not always appear to be the case. Example:

		dig soa wnrl37.cheesereason.com		SERVFAIL
		dig soa cheesereason.com		OK (SOA result)
		dig ns wnrl37.cheesereason.com    	OK (SOA result)
		dig ns cheesereason.com    		OK (NS list)

	However if you do a NS lookup and get an SOA result, then
	recurse once using the SOA domain. This still works fine for
	CNAME records, like www.snert.com.

   !	grey.c/h, cacheInit: added grey-temp-expire stat, which requires
   	adding mcc hooks for the GC expire runs.

   +	Added supplimental SpamAssassin rules and plugins to
   	examples/spamassassin/ ; updated manifests.

   !	access.c: corrections to some of the patterns used in
   	accessTagWordsMap and accessWordTagsMap

--2.2.1--

   *	Requires Libsnert 1.69.20

   !	serverInit: call pidLock following pidSave.

   !	uribl.c, rbl.c: dnsListLookup now checks and maintains a specified
   	list of previously checked names. Particularly important for NS BL